--- a/OCRC/Views/Shared/_Layout.cshtml
+++ b/OCRC/Views/Shared/_Layout.cshtml
@@ -62,24 +62,114 @@
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
-
-        <!-- header -->
-        <div class="row">
-            <div class="col-md-2">
-                <!-- logo go here -->
+        <div class="collapse navbar-collapse">
+            <!-- search form -->
+            <div class="col-md-10 col-md-offset-2 ">
+                <form class="form-inline">
+                    <div class="form-group ">
+                        <label for="School" class="sr-only">School</label>
+                        <input type="text" class="form-control" placeholder="School">
+                    </div>
+                    <div class="form-group">
+                        <label for="Name" class="sr-only">Name</label>
+                        <input type="text" class="form-control" placeholder="Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="Year" class="sr-only">Year</label>
+                        <input type="text" class="form-control" placeholder="Year">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Search</button>
+                </form>
             </div>
-            
-            <!-- menu start end-->
-            
+            </div>
+            <br />
+            <!--slide menu start-->
+            <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                @Html.Partial("_SearchForm")
+                <div class="row">
+                    <!-- filter start -->
+                    <div class="col-md-12 col-xs-12">
+
+                        <div class="col-xs-12">
+                            <h3>Filter By Sport</h3>
+
+                            <form>
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox"> Check me out
+                                    </label>
+                                </div>
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox"> Check me out
+                                    </label>
+                                </div>
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox"> Check me out
+                                    </label>
+                                </div>
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox"> Check me out
+                                    </label>
+                                </div>
+
+                            </form>
+                        </div>
+
+                        <div class="col-xs-12">
+                            <h3>more filter</h3>
+
+                            <form class="form-inline">
+
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox"> Check me out
+                                    </label>
+                                </div>
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox"> Check me out
+                                    </label>
+                                </div>
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox"> Check me out
+                                    </label>
+                                </div>
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox"> Check me out
+                                    </label>
+                                </div>
+
+                            </form>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+            <!--slide menu end-->
+
+
+            <!-- header -->
+
+            <div class="container">
+                
+
+                @RenderBody()
+            </div>
+            <div class="container">
+                <hr />
+                <footer>
+                    <p>&copy; @DateTime.Now.Year - Ogden City</p>
+                </footer>
+            </div>
         </div>
-        <div class="container body-content">
-            @RenderBody()
-            <hr />
-            <footer>
-                <p>&copy; @DateTime.Now.Year - Ogden City</p>
-            </footer>
-        </div>
-    </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
@@ -97,76 +187,7 @@
         }
     </script>
 
-    <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        @Html.Partial("_SearchForm")
-        <div class="row">
-            <!-- filter start -->
-            <div class="col-md-12 col-xs-12">
-               
-                <div class="col-xs-12">
-                    <h3>Filter By Sport</h3>
-                   
-                    <form >
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> Check me out
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> Check me out
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> Check me out
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> Check me out
-                            </label>
-                        </div>
-                        
-                    </form>
-                </div>
-
-                    <div class="col-xs-12">
-                       <h3>more filter</h3>
-                   @*<div role="tabpanel" class="tab-pane" id="profile">*@
-                        <form class="form-inline">
-                            
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox"> Check me out
-                                    </label>
-                                </div>
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox"> Check me out
-                                    </label>
-                                </div>
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox"> Check me out
-                                    </label>
-                                </div>
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox"> Check me out
-                                    </label>
-                                </div>
-
-                        </form>
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
-        <!-- filter end -->
+    
     
 
 
