--- a/OCRC/Views/Home/_SearchForm.cshtml
+++ b/OCRC/Views/Home/_SearchForm.cshtml
@@ -1,19 +1,26 @@
 ﻿<!-- search form -->
-<div class="col-md-10">
-    <form class="form-inline">
-        <div class="form-group ">
-            <label for="School" class="sr-only">School</label>
-            <input type="text" class="form-control" placeholder="School">
-        </div>
-        <div class="form-group">
-            <label for="Name" class="sr-only">Name</label>
-            <input type="text" class="form-control" placeholder="Name">
-        </div>
-        <div class="form-group">
-            <label for="Year" class="sr-only">Year</label>
-            <input type="text" class="form-control" placeholder="Year">
-        </div>
-        <button type="submit" class="btn btn-primary">Search</button>
-    </form>
-</div>
+<form>
+    <h3>filter by sport</h3>
+    <div class="checkbox">
+        <label>
+            <input type="checkbox"> Check me out
+        </label>
+    </div>
+    <div class="checkbox">
+        <label>
+            <input type="checkbox"> Check me out
+        </label>
+    </div>
+    <div class="checkbox">
+        <label>
+            <input type="checkbox"> Check me out
+        </label>
+    </div>
+    <div class="checkbox">
+        <label>
+            <input type="checkbox"> Check me out
+        </label>
+    </div>
+
+</form>
 <!-- search form end -->
