--- a/OCRC/Views/Shared/_Layout.cshtml
+++ b/OCRC/Views/Shared/_Layout.cshtml
@@ -7,8 +7,12 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>@ViewBag.Title -Ogdent City</title>
     @Styles.Render("~/Content/bootstrap.min.css")
+    @Styles.Render("~/Content/slideMenu.css")
     @Scripts.Render("~/bundles/modernizr")
-    @Styles.Render("~/Content/Site.css")
+
+
+
+
 
     <!-- Latest compiled and minified CSS -->
     @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">*@
@@ -28,38 +32,136 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
+
                     </button>
-                    <a class="navbar-brand" href="/">Ogden City</a>
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span onclick="openNav()">Filter</span>
+
+                    </button>
+
+                    <a class="navbar-brand" href="#">Ogden City</a>
                 </div>
+
+
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
 
                         <li role="presentation" class="active">@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li role="presentation">@Html.ActionLink("Report", "About", "Home")</li>
                         <li role="presentation">@Html.ActionLink("Data", "Result", "Home")</li>
                         <li role="presentation">@Html.ActionLink("Tracking", "Result", "Home")</li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/Account/Login">Login</a></li>
-                        <li><a href="/Account/RegisterUser">Register</a></li>
+                        <li><a href="#">Logout</a></li>
+                        <li><a href="#">Username</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
-
-        <!-- header -->
-        <div class="row">
-            <div class="col-md-2">
-                <!-- logo go here -->
+        <div class="collapse navbar-collapse">
+            <!-- search form -->
+            <div class="col-md-10 col-md-offset-2 ">
+                <form class="form-inline">
+                    <div class="form-group ">
+                        <label for="School" class="sr-only">School</label>
+                        <input type="text" class="form-control" placeholder="School">
+                    </div>
+                    <div class="form-group">
+                        <label for="Name" class="sr-only">Name</label>
+                        <input type="text" class="form-control" placeholder="Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="Year" class="sr-only">Year</label>
+                        <input type="text" class="form-control" placeholder="Year">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Search</button>
+                </form>
             </div>
-            
-            <!-- menu start end-->
-            
         </div>
-        <div class="container body-content">
+        <br />
+        <!--slide menu start-->
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            @Html.Partial("_SearchForm")
+            <div class="row">
+                <!-- filter start -->
+                <div class="col-md-12 col-xs-12">
+
+                    <div class="col-xs-12">
+                        <h3>Filter By Sport</h3>
+
+                        <form>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox"> Check me out
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox"> Check me out
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox"> Check me out
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox"> Check me out
+                                </label>
+                            </div>
+
+                        </form>
+                    </div>
+
+                    <div class="col-xs-12">
+                        <h3>more filter</h3>
+
+                        <form class="form-inline">
+
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox"> Check me out
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox"> Check me out
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox"> Check me out
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox"> Check me out
+                                </label>
+                            </div>
+
+                        </form>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+        <!--slide menu end-->
+        <!-- header -->
+
+        <div class="container">
+
+
             @RenderBody()
+        </div>
+        <div class="container">
             <hr />
             <footer>
                 <p>&copy; @DateTime.Now.Year - Ogden City</p>
@@ -69,6 +171,23 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+
     @RenderSection("scripts", required: false)
+    <script>
+        /* Set the width of the side navigation to 250px */
+        function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+        }
+
+        /* Set the width of the side navigation to 0 */
+        function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+        }
+    </script>
+
+
+
+
+
 </body>
 </html>
